--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <title>Sistema de mensajería</title>
     <link rel="Stylesheet" href="assets/style.css">
+    <script src="https://kit.fontawesome.com/9d592d0453.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -16,45 +17,65 @@
             <div class="Nuevochat">
                 <p>Nuevo Chat</p>
             </div>
-            <div class="contacto">
-                <img class="foto" src="assets/images/Screen Shot 2018-11-28 at 15.27.14.jpg">
-                <p>Juanita</p>
-                <p>Estado</p>
-            </div>
-            <div class="contacto"><img class="foto" src="assets/images/Screen Shot 2018-11-28 at 15.28.04.jpg">
-                <p>Alberto</p>
-                <p>Estado</p>
-            </div>
-            <div class="contacto">
-                <img class="foto" src="assets/images/Screen Shot 2018-11-28 at 15.28.30.jpg">
-                <p>Ignacio</p>
-                <p>Estado</p>
-            </div>
-            <div class="contacto">
-                <img class="foto" src="assets/images/Screen Shot 2018-11-28 at 15.30.34.jpg">
-                <p>Cristian</p>
-                <p>Estado</p>
-            </div>
-            <div class="contacto">
-                <img class="foto" src="assets/images/Screen Shot 2018-11-28 at 15.30.54.jpg">
-                <p>María José</p>
-                <p>Estado</p>
-            </div>
-            <div class="contacto">
-                <img class="foto" src="assets/images/Screen Shot 2018-11-28 at 15.31.09.jpg">
-                <p>Gonzalo</p>
-                <p>Estado</p>
-            </div>
-            <div class="contacto">
-                <img class="foto" src="assets/images/Screen Shot 2018-11-28 at 15.32.16.jpg">
-                <p>Juan Pablo</p>
-                <p>Estado</p>
-            </div>
-            <div class="contacto">
-                <img class="foto" src="assets/images/Screen Shot 2018-11-28 at 15.32.44.jpg">
-                <p>Magdalena</p>
-                <p>Estado</p>
-            </div>
+            <ul>
+                <li>
+                    <div class="contacto">
+                        <img class="foto" src="assets/images/Screen Shot 2018-11-28 at 15.27.14.jpg">
+                        <p>Juanita</p>
+                        <p>Estado</p>
+                    </div>
+                </li>
+
+
+                <li>
+                    <div class="contacto"><img class="foto" src="assets/images/Screen Shot 2018-11-28 at 15.28.04.jpg">
+                        <p>Alberto</p>
+                        <p>Estado</p>
+                    </div>
+                </li>
+                <li>
+                    <div class="contacto">
+                        <img class="foto" src="assets/images/Screen Shot 2018-11-28 at 15.28.30.jpg">
+                        <p>Ignacio</p>
+                        <p>Estado</p>
+                    </div>
+                </li>
+                <li>
+                    <div class="contacto">
+                        <img class="foto" src="assets/images/Screen Shot 2018-11-28 at 15.30.34.jpg">
+                        <p>Cristian</p>
+                        <p>Estado</p>
+                    </div>
+                </li>
+                <li>
+                    <div class="contacto">
+                        <img class="foto" src="assets/images/Screen Shot 2018-11-28 at 15.30.54.jpg">
+                        <p>María José</p>
+                        <p>Estado</p>
+                    </div>
+                </li>
+                <li>
+                    <div class="contacto">
+                        <img class="foto" src="assets/images/Screen Shot 2018-11-28 at 15.31.09.jpg">
+                        <p>Gonzalo</p>
+                        <p>Estado</p>
+                    </div>
+                </li>
+                <li>
+                    <div class="contacto">
+                        <img class="foto" src="assets/images/Screen Shot 2018-11-28 at 15.32.16.jpg">
+                        <p>Juan Pablo</p>
+                        <p>Estado</p>
+                    </div>
+                </li>
+                <li>
+                    <div class="contacto">
+                        <img class="foto" src="assets/images/Screen Shot 2018-11-28 at 15.32.44.jpg">
+                        <p>Magdalena</p>
+                        <p>Estado</p>
+                    </div>
+                </li>
+            </ul>
         </div>
         <div class="principal">
             <div class="contenido"><img src="assets/images/hand.png">
