--- a/index2.html
+++ b/index2.html
@@ -2,25 +2,113 @@
 <html>
 
 <head>
-
+    <link rel="stylesheet" href="assets/style2.css">
+    <script src="https://kit.fontawesome.com/9d592d0453.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
-    <div style="display: flex">
-        <div style="
-            display: flex;
-            align-items: center;
-            flex-direction: column;
-            width: 9em;
-            background-color: aqua;
-            min-height: 100vh;
-            ">
-            <p>Item 1</p>
-            <p>Item 2</p>
-            <p>Item 3</p>
+    <div class="container">
+        <div class="contactos">
+            <ul>
+                <li class="borde">
+                    <div class="primer">
+                        <div class="maria"><section><img class="foto1" src="assets/images/maria.jpg"></section>
+                           <section class="nombre"><p class="negro">María</p>
+                            <p class="gris">Activo ahora</p></section>
+                        </div>
+                        <div class="iconos">
+                            <i class="fa-regular fa-message gris amor"></i>
+                            <i class="fa-solid fa-bars gris amor"></i>
+                        </div>
+                    </div>
+                </li>
+                <li class="borde">
+                    <div class="contenedor">
+                        <div class="Nuevochat">
+                            <p>Nuevo Chat</p>
+                        </div>
+                    </div>
+                </li>
+                <li class="borde">
+                    <div class="contacto">
+                        <section>
+                            <img class="foto" src="assets/images/Screen Shot 2018-11-28 at 15.27.14.jpg">
+                        </section>
+                        <section class="negro">
+                            <p>Juanita</p>
+                            <p>Estado</p>
+                        </section>
+                </li>
+                <li class="borde">
+                    <div class="contacto">
+                        <section><img class="foto" src="assets/images/Screen Shot 2018-11-28 at 15.28.04.jpg"></section>
+                        <section class="negro">
+                            <p>Alberto</p>
+                            <p>Estado</p>
+                        </section>
+                    </div>
+                </li>
+                <li class="borde resultado">
+                    <div class="contacto">
+                        <section><img class="foto" src="assets/images/Screen Shot 2018-11-28 at 15.28.30.jpg"></section>
+                        <section class="negro">
+                            <p>Ignacio</p>
+                            <p>Estado</p>
+                        </section>
+                    </div>
+                </li>
+                <li class="borde resultado">
+                    <div class="contacto">
+                        <section><img class="foto" src="assets/images/Screen Shot 2018-11-28 at 15.30.34.jpg"></section>
+                        <section class="negro">
+                            <p>Cristian</p>
+                            <p>Estado</p>
+                        </section>
+                    </div>
+                </li>
+                <li class="borde">
+                    <div class="contacto">
+                        <section><img class="foto" src="assets/images/Screen Shot 2018-11-28 at 15.30.54.jpg"></section>
+                        <section class="negro">
+                            <p>María José</p>
+                            <p>Estado</p>
+                        </section>
+                    </div>
+                </li>
+                <li class="borde">
+                    <div class="contacto">
+                        <section><img class="foto" src="assets/images/Screen Shot 2018-11-28 at 15.31.09.jpg"></section>
+                        <section class="negro">
+                            <p>Gonzalo</p>
+                            <p>Estado</p>
+                        </section>
+                    </div>
+                </li>
+                <li class="borde">
+                    <div class="contacto">
+                        <section><img class="foto" src="assets/images/Screen Shot 2018-11-28 at 15.32.16.jpg"></section>
+                        <section class="negro">
+                            <p>Juan Pablo</p>
+                            <p>Estado</p>
+                        </section>
+                    </div>
+                </li>
+                <li class="borde">
+                    <div class="contacto">
+                        <section><img class="foto" src="assets/images/Screen Shot 2018-11-28 at 15.32.44.jpg"></section>
+                        <section class="negro">
+                            <p>Magdalena</p>
+                            <p>Estado</p>
+                        </section>
+                    </div>
+                </li>
+            </ul>
         </div>
-        <div style="justify-content: center;">
+        <div class="manitos">
             <img src="assets/images/hand.png">
+            <h1>Comienza el Networking</h1>
+            <p class="texto">Presiona el botón <b>"Nuevo Chat"</b> para comenzar a crear nuevas redes de contacto para tu empresa
+                o emprendimiento</p>
         </div>
     </div>
 
